--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-python==3.8
-numpy
-pandas
-scikit-learn
-pytest
-requests
-fastapi==0.63.0
-uvicorn
+python==3.11
+scikit-learn==1.2.2
+pandas==2.0.0
+numpy==1.24.2
+pytest==7.3.1
+jupyter==1.0.0
+jupyterlab==3.5.3
+fastapi==0.95.1
+uviron==0.21.1
+flake8==6.0.0
 gunicorn
