--- a/conda.yml
+++ b/conda.yml
@@ -12,4 +12,5 @@ dependencies:
   - jupyter=1.0.0
   - jupyterlab=3.5.3
   - fastapi=0.95.1
-  - uviron=0.21.1
+  - uvicorn=0.21.1
+  - flake8=6.0.0
